log
Sun May 15 06:14:48 HSP 2022: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:64:31: error: statement with no effect [-Werror=unused-value]
             adj_n->sudo[i][j] == num;
             ~~~~~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca2d96e
Sun May 15 06:15:09 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8c72f84
Sun May 15 07:31:21 HSP 2022: 
 sudoku.c | 56 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 56 insertions(+)
 tests:  2|4
total_score: 15/70
fbc4d50
